# genesis-world-poc

./: .gitignore  Dockerfile  README.md
3dgs_scene/: Dockerfile  readme.md
3dgs_scene/docs/: nyx_amd_issue.md  overall_todo.md  runtime.md
3dgs_scene/docs/exp/: part1-exp.md  part5-exp.md
3dgs_scene/docs/features/: feature1_nyx_3dgs_render.md  (+1 more)
3dgs_scene/scripts/: build_vkgs_amd.sh  franka_fk_dump.py  franka_kitchen_common.py  gs_bridge.py  m0b_build_cfg.py  m0b_genesis_poses.py  render_kitchen.py  render_vkgs_amd.sh
amd_support/: readme.md
amd_support/scripts/: franka_baseline.py  rigid_bench.py
cloth_sim/: .gitignore  Dockerfile.nv  README.md  pyproject.toml
cloth_sim/docs/: readme.md
cloth_sim/scripts/: 10_cloth_smoke.py  22_real_cloth_bending.py  30_franka_grasp_cloth.py  40_garment_selfcollision_grasp.py  50_garment_pick_place.py  60_cloth_fold.py  70_cloth_fold_ipc.py  _ipc_grip_smoke.py  _ipc_smoke.py  _probe_fem.py  _probe_fem2.py  _probe_fem3.py  _probe_ipc.py  preprocess_garment.py  run_f5_sweep.sh
docs/: cloth_asset.md
docs/features/: feature1-4_foundation.md  feature5_garment_task.md  feature8_garment_mesh_quality.md  feature9_cloth_folding.md
exp/: overall_todo.md  part1-exp.md  part3-exp.md  part4-exp.md  part5-exp.md  study.md
exp/assets/: clothesnet.md
exp/design/: feature2_cloth_asset.md  feature3_grasp_contact.md
scripts/: 00_env_check.py  20_cloth_drape.py  21_cloth_over_cylinder.py  30_franka_grasp_cloth.py  40_garment_selfcollision_grasp.py  50_garment_pick_place.py  _api_probe.py  _encode.py  make_video.py  run_feature2.sh
(+16 files in other folders)
